deploy/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blaktail
  labels:
    app.kubernetes.io/part-of: blaktail
    pod-security.kubernetes.io/enforce: restricted
